LandingPage added with all the content

--- a/StomatologijaWebApp2/WebApplication1/WebApplication1.csproj
+++ b/StomatologijaWebApp2/WebApplication1/WebApplication1.csproj
@@ -225,12 +225,69 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\css\animate.css" />
+    <Content Include="Content\css\bootstrap-theme.css" />
+    <Content Include="Content\css\bootstrap-theme.min.css" />
+    <Content Include="Content\css\bootstrap.css" />
+    <Content Include="Content\css\bootstrap.min.css" />
+    <Content Include="Content\css\demo.css" />
+    <Content Include="Content\css\font-awesome.min.css" />
+    <Content Include="Content\css\magnific-popup.css" />
+    <Content Include="Content\css\owl.carousel.css" />
+    <Content Include="Content\css\owl.theme.css" />
+    <Content Include="Content\css\preload.css" />
+    <Content Include="Content\css\responsive.css" />
+    <Content Include="Content\css\style.css" />
+    <Content Include="Content\css\YTPlayer.css" />
+    <Content Include="Content\Images\download_bg.jpg" />
+    <Content Include="Content\Images\feature_bg.jpg" />
+    <Content Include="Content\Images\footer_bg.jpg" />
+    <Content Include="Content\Images\iphone_full.png" />
+    <Content Include="Content\Images\iphone_half.png" />
+    <Content Include="Content\Images\left-arrow-hover.png" />
+    <Content Include="Content\Images\left-arrow.png" />
+    <Content Include="Content\Images\lg-logo.png" />
+    <Content Include="Content\Images\logo.png" />
+    <Content Include="Content\Images\map_icon_3.png" />
+    <Content Include="Content\Images\mobile.jpg" />
+    <Content Include="Content\Images\phone_mockup.jpg" />
+    <Content Include="Content\Images\play-btn.png" />
+    <Content Include="Content\Images\reviews_bg.jpg" />
+    <Content Include="Content\Images\right-arrow-hover.png" />
+    <Content Include="Content\Images\right-arrow.png" />
+    <Content Include="Content\Images\screenshot.jpg" />
+    <Content Include="Content\Images\subscription_bg.jpg" />
+    <Content Include="Content\Images\thumb-1.png" />
+    <Content Include="Content\Images\transparent-bg.png" />
+    <Content Include="Content\Images\ui.totop.png" />
+    <Content Include="Content\Images\video_bg.jpg" />
+    <Content Include="Content\js\bootstrap.js" />
+    <Content Include="Content\js\bootstrap.min.js" />
+    <Content Include="Content\js\easing.js" />
+    <Content Include="Content\js\jquery.ajaxchimp.min.js" />
+    <Content Include="Content\js\jquery.flexslider-min.js" />
+    <Content Include="Content\js\jquery.localScroll.js" />
+    <Content Include="Content\js\jquery.localScroll.min.js" />
+    <Content Include="Content\js\jquery.magnific-popup.js" />
+    <Content Include="Content\js\jquery.mb.YTPlayer.js" />
+    <Content Include="Content\js\jquery.min.js" />
+    <Content Include="Content\js\jquery.nav.js" />
+    <Content Include="Content\js\jquery.parallax.js" />
+    <Content Include="Content\js\jquery.placeholder.js" />
+    <Content Include="Content\js\jquery.scrollTo.min.js" />
+    <Content Include="Content\js\jquery.ui.totop.min.js" />
+    <Content Include="Content\js\matchMedia.js" />
+    <Content Include="Content\js\owl.carousel.js" />
+    <Content Include="Content\js\script.js" />
+    <Content Include="Content\js\smoothscroll.js" />
+    <Content Include="Content\js\wow.js" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Content\css\desktop.ini" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -277,9 +334,13 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Home\LandingPage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\Images\demo\" />
+    <Folder Include="Content\Images\icons\" />
+    <Folder Include="Content\Images\slider\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
