--- a/StomatologijaWebApp2/WebApplication1/WebApplication1.csproj
+++ b/StomatologijaWebApp2/WebApplication1/WebApplication1.csproj
@@ -184,20 +184,21 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Enumerations\EmploymentStatus.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Interfaces\IModificationHistory.cs" />
-    <Compile Include="Migrations\201611021047527_InitialMigration.cs" />
-    <Compile Include="Migrations\201611021047527_InitialMigration.Designer.cs">
-      <DependentUpon>201611021047527_InitialMigration.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201611030940311_ChangedDatesToNullables.cs" />
-    <Compile Include="Migrations\201611030940311_ChangedDatesToNullables.Designer.cs">
-      <DependentUpon>201611030940311_ChangedDatesToNullables.cs</DependentUpon>
+    <Compile Include="Migrations\201611081556096_InitialMigration.cs" />
+    <Compile Include="Migrations\201611081556096_InitialMigration.Designer.cs">
+      <DependentUpon>201611081556096_InitialMigration.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Appointment.cs" />
+    <Compile Include="Models\MedicalHistory.cs" />
     <Compile Include="Models\Role.cs" />
+    <Compile Include="Models\Schedule.cs" />
+    <Compile Include="Models\Tooth.cs" />
     <Compile Include="ViewModels\Account\ForgotPasswordViewModel.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\Dentist.cs" />
@@ -352,11 +353,8 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201611021047527_InitialMigration.resx">
-      <DependentUpon>201611021047527_InitialMigration.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201611030940311_ChangedDatesToNullables.resx">
-      <DependentUpon>201611030940311_ChangedDatesToNullables.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201611081556096_InitialMigration.resx">
+      <DependentUpon>201611081556096_InitialMigration.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
