Seed method kind of works now, with the new database

--- a/StomatologijaWebApp2/WebApplication1/WebApplication1.csproj
+++ b/StomatologijaWebApp2/WebApplication1/WebApplication1.csproj
@@ -189,9 +189,9 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Interfaces\IModificationHistory.cs" />
-    <Compile Include="Migrations\201611081556096_InitialMigration.cs" />
-    <Compile Include="Migrations\201611081556096_InitialMigration.Designer.cs">
-      <DependentUpon>201611081556096_InitialMigration.cs</DependentUpon>
+    <Compile Include="Migrations\201611091405014_tryone.cs" />
+    <Compile Include="Migrations\201611091405014_tryone.Designer.cs">
+      <DependentUpon>201611091405014_tryone.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Appointment.cs" />
@@ -353,8 +353,8 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201611081556096_InitialMigration.resx">
-      <DependentUpon>201611081556096_InitialMigration.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201611091405014_tryone.resx">
+      <DependentUpon>201611091405014_tryone.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
