Dentist Controller Added, some initial views are settled, some needs more resettling, and Seed method accustomed for future use

--- a/StomatologijaWebApp2/WebApplication1/WebApplication1.csproj
+++ b/StomatologijaWebApp2/WebApplication1/WebApplication1.csproj
@@ -182,6 +182,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\DentistController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Enumerations\EmploymentStatus.cs" />
@@ -339,6 +340,12 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Home\LandingPage.cshtml" />
+    <Content Include="Views\Dentist\Create.cshtml" />
+    <Content Include="Views\Dentist\Delete.cshtml" />
+    <Content Include="Views\Dentist\Details.cshtml" />
+    <Content Include="Views\Dentist\Edit.cshtml" />
+    <Content Include="Views\Dentist\Index.cshtml" />
+    <Content Include="Views\Dentist\Register.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
