--- a/StomatologijaWebApp2/WebApplication1/WebApplication1.csproj
+++ b/StomatologijaWebApp2/WebApplication1/WebApplication1.csproj
@@ -188,6 +188,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\DentistController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -202,7 +203,12 @@
     <Compile Include="Migrations\201611111335565_InitialMigration.Designer.cs">
       <DependentUpon>201611111335565_InitialMigration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201611121444144_AdminAdded.cs" />
+    <Compile Include="Migrations\201611121444144_AdminAdded.Designer.cs">
+      <DependentUpon>201611121444144_AdminAdded.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Admin.cs" />
     <Compile Include="Models\Appointment.cs" />
     <Compile Include="Models\MedicalHistory.cs" />
     <Compile Include="Models\Role.cs" />
@@ -749,6 +755,11 @@
     <Content Include="Scripts\kendo\kendo.web.min.js.map" />
     <Content Include="Scripts\kendo\kendo.webcomponents.min.js.map" />
     <Content Include="Scripts\kendo\kendo.window.min.js.map" />
+    <Content Include="Views\Admin\Create.cshtml" />
+    <Content Include="Views\Admin\Delete.cshtml" />
+    <Content Include="Views\Admin\Details.cshtml" />
+    <Content Include="Views\Admin\Edit.cshtml" />
+    <Content Include="Views\Admin\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -788,6 +799,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201611111335565_InitialMigration.resx">
       <DependentUpon>201611111335565_InitialMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201611121444144_AdminAdded.resx">
+      <DependentUpon>201611121444144_AdminAdded.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
