--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -774,12 +774,12 @@
     <Content Include="Views\Admin\Edit.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
     <Content Include="Views\Admin\GetDentist.cshtml" />
-    <Content Include="Views\Dentist\Patient\Index.cshtml" />
-    <Content Include="Views\Dentist\Patient\FindDoctor.cshtml" />
+    <Content Include="Views\Patient\Index.cshtml" />
+    <Content Include="Views\Patient\FindDoctor.cshtml" />
     <Content Include="Views\Dentist\Index.cshtml" />
     <Content Include="Views\Dentist\MySchedule.cshtml" />
-    <Content Include="Views\Dentist\Patient\ArrangeAppointment.cshtml" />
-    <Content Include="Views\Dentist\Patient\MyDentist.cshtml" />
+    <Content Include="Views\Patient\ArrangeAppointment.cshtml" />
+    <Content Include="Views\Patient\MyDentist.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Admin\GetPatients.cshtml" />
   </ItemGroup>
