--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -258,6 +258,7 @@
     <Content Include="Content\css\bootstrap-theme.min.css" />
     <Content Include="Content\css\bootstrap.css" />
     <Content Include="Content\css\bootstrap.min.css" />
+    <Content Include="Content\css\CustomLeftNavbar.css" />
     <Content Include="Content\css\CustomLogin.css" />
     <Content Include="Content\css\demo.css" />
     <Content Include="Content\css\magnific-popup.css" />
@@ -782,6 +783,8 @@
     <Content Include="Views\Patient\MyDentist.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Admin\GetPatients.cshtml" />
+    <Content Include="Views\Dentist\Notes.cshtml" />
+    <Content Include="Views\Dentist\Draft.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
