Adjusted and solved bugs in Login. Added patient syusuf@gmail.com in database so we can use this profile prof patient Login now. Added MedicalHistory view, data is still to be fetched from database.

--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -780,6 +780,7 @@
     <Content Include="Views\Admin\GetPatients.cshtml" />
     <Content Include="Views\Dentist\Notes.cshtml" />
     <Content Include="Views\Dentist\Draft.cshtml" />
+    <Content Include="Views\Patient\MedicalHistory.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
