Information about Dentist are now available at index page (Except photo that should be implemented)

--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -57,9 +57,6 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="Microsoft.QualityTools.Testing.Fakes, Version=12.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -252,7 +249,6 @@
     <Content Include="Content\css\bootstrap-theme.min.css" />
     <Content Include="Content\css\bootstrap.css" />
     <Content Include="Content\css\bootstrap.min.css" />
-    <Content Include="Content\css\CustomLeftNavbar.css" />
     <Content Include="Content\css\CustomLogin.css" />
     <Content Include="Content\css\CustomProfile.css" />
     <Content Include="Content\css\demo.css" />
@@ -260,6 +256,7 @@
     <Content Include="Content\css\owl.carousel.css" />
     <Content Include="Content\css\owl.theme.css" />
     <Content Include="Content\css\preload.css" />
+    <Content Include="Content\Images\DSC00261.JPG" />
     <Content Include="Content\registercss\register.css" />
     <Content Include="Content\css\responsive.css" />
     <Content Include="Content\css\style.css" />
