View EditMyProfile for Dentist added, PatientProfile for Dentist edited; Profile editing links in dropdown menu are now following roles.  Minor bug fixes

--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -779,6 +779,8 @@
     <Content Include="Views\Dentist\Draft.cshtml" />
     <Content Include="Views\Patient\MedicalHistory.cshtml" />
     <Content Include="Views\Dentist\PatientProfile.cshtml" />
+    <Content Include="Views\Patient\Edit.cshtml" />
+    <Content Include="Views\Dentist\EditMyProfile.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
