One migration added, Dentist can edit his profile, button for "Choose file" added in EditMyProfile. Action Link for "EditMyProfile" added to "Edit Profile" in left navbar in "Account"

--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -204,6 +204,10 @@
     <Compile Include="Migrations\201611301222108_InitialMigration.Designer.cs">
       <DependentUpon>201611301222108_InitialMigration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201612021351293_User Photo.cs" />
+    <Compile Include="Migrations\201612021351293_User Photo.Designer.cs">
+      <DependentUpon>201612021351293_User Photo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Admin.cs" />
     <Compile Include="Models\Appointment.cs" />
@@ -821,6 +825,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201611301222108_InitialMigration.resx">
       <DependentUpon>201611301222108_InitialMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612021351293_User Photo.resx">
+      <DependentUpon>201612021351293_User Photo.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
