Patient able to edit his/her profila (some bug), changed index paged, a bit customized

--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -200,13 +200,9 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Interfaces\IModificationHistory.cs" />
-    <Compile Include="Migrations\201611301222108_InitialMigration.cs" />
-    <Compile Include="Migrations\201611301222108_InitialMigration.Designer.cs">
-      <DependentUpon>201611301222108_InitialMigration.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201612021351293_User Photo.cs" />
-    <Compile Include="Migrations\201612021351293_User Photo.Designer.cs">
-      <DependentUpon>201612021351293_User Photo.cs</DependentUpon>
+    <Compile Include="Migrations\201612021534157_user photo.cs" />
+    <Compile Include="Migrations\201612021534157_user photo.Designer.cs">
+      <DependentUpon>201612021534157_user photo.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Admin.cs" />
@@ -823,11 +819,8 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201611301222108_InitialMigration.resx">
-      <DependentUpon>201611301222108_InitialMigration.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201612021351293_User Photo.resx">
-      <DependentUpon>201612021351293_User Photo.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201612021534157_user photo.resx">
+      <DependentUpon>201612021534157_user photo.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
