--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -200,9 +200,9 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Interfaces\IModificationHistory.cs" />
-    <Compile Include="Migrations\201612060840257_InitialMigration.cs" />
-    <Compile Include="Migrations\201612060840257_InitialMigration.Designer.cs">
-      <DependentUpon>201612060840257_InitialMigration.cs</DependentUpon>
+    <Compile Include="Migrations\201612071022540_InitialMigration.cs" />
+    <Compile Include="Migrations\201612071022540_InitialMigration.Designer.cs">
+      <DependentUpon>201612071022540_InitialMigration.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Admin.cs" />
@@ -238,7 +238,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\ManageLoginsViewModel.cs" />
-    <Compile Include="ViewModels\PatientProfile.cs" />
+    <Compile Include="ViewModels\PatientProfileViewModel.cs" />
     <Compile Include="ViewModels\SetPasswordViewModel.cs" />
     <Compile Include="ViewModels\VerifyPhoneNumberViewModel.cs" />
   </ItemGroup>
@@ -809,7 +809,6 @@
     <Folder Include="Content\kendo\Uniform\" />
     <Folder Include="Scripts\kendo\cultures\" />
     <Folder Include="Scripts\kendo\messages\" />
-    <Folder Include="Views\Notification\" />
     <Folder Include="Views\Scheduler\" />
   </ItemGroup>
   <ItemGroup>
@@ -821,8 +820,8 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201612060840257_InitialMigration.resx">
-      <DependentUpon>201612060840257_InitialMigration.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201612071022540_InitialMigration.resx">
+      <DependentUpon>201612071022540_InitialMigration.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
