Dentist should be able to see Patient's teet (conditions) in Patent's profile

--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -257,7 +257,24 @@
     <Content Include="Content\css\owl.carousel.css" />
     <Content Include="Content\css\owl.theme.css" />
     <Content Include="Content\css\preload.css" />
+    <Content Include="Content\css\TeethImages.css" />
     <Content Include="Content\Images\DSC00261.JPG" />
+    <Content Include="Content\Images\teeth\d1.png" />
+    <Content Include="Content\Images\teeth\d2.png" />
+    <Content Include="Content\Images\teeth\d3.png" />
+    <Content Include="Content\Images\teeth\d4.png" />
+    <Content Include="Content\Images\teeth\d5.png" />
+    <Content Include="Content\Images\teeth\d6.png" />
+    <Content Include="Content\Images\teeth\d7.png" />
+    <Content Include="Content\Images\teeth\d8.png" />
+    <Content Include="Content\Images\teeth\gd1.png" />
+    <Content Include="Content\Images\teeth\gd2.png" />
+    <Content Include="Content\Images\teeth\gd3.png" />
+    <Content Include="Content\Images\teeth\gd4.png" />
+    <Content Include="Content\Images\teeth\gd5.png" />
+    <Content Include="Content\Images\teeth\gd6.png" />
+    <Content Include="Content\Images\teeth\gd7.png" />
+    <Content Include="Content\Images\teeth\gd8.png" />
     <Content Include="Content\registercss\register.css" />
     <Content Include="Content\css\responsive.css" />
     <Content Include="Content\css\style.css" />
